--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Machine Learning for Humans on Cats - A playful gateway to ML with Python, AI art, and cat-powered prompts." />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
+  <link rel="icon" type="image/x-icon" href="icons/favicon.png">
 </head>
 
 <body>
