--- a/index.html
+++ b/index.html
@@ -3,10 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Machine Learning for Humans on Cats - A playful gateway to ML with Python, AI art, and cat-powered prompts." />
+  <!-- Basic SEO -->
+  <meta name="description" content="Learn machine learning with clever cats! MeowLearning offers Shorts, a book, one-pagers, and notebooks for beginners.">
+  <meta name="keywords" content="machine learning, data preprocessing, cats, ML, beginner ML, feature selection, EDA, Python, Data Collecting, Predictive Machine, ML, AI, NN, DS, Supervised Learning, Unsupervised Learning, Ensembles, Reinforcement Learning, Transfer Learning, Outliers, Errors, Missing data, Scaling, Encoding, Classification, Regression, Naive Bayes, Logistic Regression, K-nearest neighbours, Support Vector Machine, Decision Tree, Linear Regression, Polynomial Regression, Regression Tree, Stacking, Random Forest, Boosting, Clustering, Hierarchical clustering, K-means clustering, DBSCAN, Neural networks, Backpropagation, Feed Forward Neural Networks, Long-short-term-memory network, LSTM, Convolutional Neural Networks, CNN, Generative Adversarial Networks, GAN">
+  <meta name="author" content="Kateryna Kononova">
+
+  <!-- Social Sharing -->
+  <meta property="og:title" content="MeowLearning – Learn ML with Cats!" />
+  <meta property="og:description" content="Shorts, one-pagers, GitHub code and a practical book – all-in-one for ML beginners." />
+  <meta property="og:image" content="https://katerynakononova.github.io/meowlearning/images/book-cover.jpg" />
+  <meta property="og:url" content="https://katerynakononova.github.io/meowlearning/" />
+
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
   <link rel="icon" type="image/x-icon" href="icons/favicon.png">
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6PK1S4M4PW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-6PK1S4M4PW');
+  </script>
+
 </head>
 
 <body>
