--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 		<h2>Sections</h2>
 		<ul>
 			<li><a href="#data-preprocessing"><img src="icons/data.png" alt="Data"> Data Preprocessing</a></li>
-			<li><a href="#regression"><img src="icons/regression.png" alt="Regression"> Regression</a></li>
 			<li><a href="#classification"><img src="icons/classification.png" alt="Classification"> Classification</a></li>
+			<li><a href="#regression"><img src="icons/regression.png" alt="Regression"> Regression</a></li>			
 			<li><a href="#clustering"><img src="icons/clustering.png" alt="Clustering"> Clustering</a></li>
 			<li><a href="#nn"><img src="icons/nn.png" alt="Neural Networks"> Neural Networks</a></li>
 		</ul>
@@ -334,15 +334,15 @@
     </section>
 	
 	<section id="eda-all-in-one" class="section">
-		<h2>All in One</h2>
+		<h2>Data Preprocessing: All in One</h2>
 		<div class="cards">
 
 			<div class="card card-wide">
 				<a href="https://www.youtube.com/watch?v=BB5HB1GgQQY" target="_blank" class="card-img-link">
-					<img src="images/eda-all-in-one.jpg" alt="All in One preview" class="card-img" />
+					<img src="images/eda-all-in-one.jpg" alt="EDA All in One preview" class="card-img" />
 				</a>
 				<div class="card-title-bar">
-					<h3>Data Preprocessing: All in One</h3>
+					<h3>Vibe-Coding: Setting the Mood for Your Model</h3>
 					<div class="card-links">				
 						<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/EDA.ipynb" target="_blank">
 							<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
@@ -376,14 +376,157 @@
 					🐾 Curious how it all works?					
 				</p>
 				<p>
-					Get the full story (and all the code) in <em><strong>Machine Learning for Humans on Cats </strong></em> 
-					<a href="https://www.amazon.com/dp/B0CW9SFYXF" target="_blank"><img src="icons/amazon.png" alt="Amazon">on Amazon
+					Get the full story (and all the code) in 
+					<a href="https://www.amazon.com/dp/B0CW9SFYXF" target="_blank">
+						<em><strong>Machine Learning for Humans on Cats </strong></em><img src="icons/amazon.png" alt="Amazon">
 					</a>
 				</p>
 			</div>
 		</div>
 	</section>
 	
+		<section id="classification-theory" class="section">
+      <h2>Classification: Theory</h2>
+      <div class="cards">
+
+		<div class="card">
+			<a href="https://youtube.com/shorts/4A8nsCYQDZc" target="_blank" class="card-img-link">
+				<img src="images/t-logistic-regression.jpg" alt="Logistic Regression preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Logistic Regression</h3>				
+			</div>
+		</div>
+
+		<div class="card">
+			<a href="https://youtube.com/shorts/w5ttKir3s50" target="_blank" class="card-img-link">
+				<img src="images/t-naive-bayes.jpg" alt="Naive Bayes preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Naive Bayes</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/3OuYYoSPnK0" target="_blank" class="card-img-link">
+				<img src="images/t-knn.jpg" alt="K-Nearest Neighbours preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>K-Nearest Neighbours</h3>				
+			</div>
+		</div>
+
+		<div class="card">
+			<a href="https://youtube.com/shorts/TFUvuRDo2NU" target="_blank" class="card-img-link">
+				<img src="images/t-svm.jpg" alt="Support Vector Machine preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Support Vector Machine</h3>				
+			</div>
+		</div>
+
+		<div class="card">
+			<a href="https://youtube.com/shorts/Ju0XXSMPdm4" target="_blank" class="card-img-link">
+				<img src="images/t-ct.jpg" alt="Classification Trees preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Classification Trees</h3>								
+			</div>
+		</div>
+
+      </div>
+    </section>
+	
+	<section id="classification" class="section">
+      <h2>Classification: Practice</h2>
+      <div class="cards">
+
+		<div class="card">
+			<a href="https://youtube.com/shorts/Uu5xhdya1oo" target="_blank" class="card-img-link">
+				<img src="images/logistic-regression.jpg" alt="Logistic Regression preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Logistic Regression</h3>
+				<div class="card-links">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-LogisticRegression.pdf" target="_blank">
+						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
+					</a>
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/Classification-LogisticRegression.ipynb" target="_blank">
+						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+					</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="card">
+			<a href="https://www.youtube.com/@katerynakononova" target="_blank" class="card-img-link">
+				<img src="images/coming-soon.jpg" alt="Coming Soon preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Coming soon</h3>				
+			</div>
+		</div>		
+
+      </div>
+    </section>
+	
+	<section id="eda-all-in-one" class="section">
+		<h2>Classification: All in One</h2>
+		<div class="cards">
+
+			<div class="card card-wide">
+				<a href="https://youtu.be/rUFfHuuQY2E" target="_blank" class="card-img-link">
+					<img src="images/classification-all-in-one.jpg" alt="Classification All in One preview" class="card-img" />
+				</a>
+				<div class="card-title-bar">
+					<h3>Vibe Sorting: Put Data in Its Place</h3>
+					<div class="card-links">				
+						<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/Classifiers.ipynb" target="_blank">
+							<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<section id="book-promo" class="section">
+		<div class="book-promo-container">
+			<div class="book-promo-image">
+				<a href="https://www.amazon.com/dp/B0CW9SFYXF" target="_blank">
+					<img src="images/book-cover.jpg" alt="Machine Learning for Humans on Cats Book Cover" />
+				</a>
+			</div>
+			<div class="book-promo-text">
+				<h2>Get the Full Guide</h2>
+				<p>
+					<img src="icons/shylo.png" alt="Shylo" class="cat-icon" />		
+					<em>“I wonder if these algorithms will be able to distinguish tasty cat food from bad.”</em></br>				
+					<img src="icons/mylo.png" alt="Mylo" class="cat-icon" />
+					<em>“Only one way to find out — let’s train them!”</em>
+				</p>
+				<p>
+					Join the cats as they sharpen their instincts and learn to classify like pros using:
+					<ul>
+						<li>Logistic Regression — simple, fast, and great for yes/no munchies</li>
+						<li>Naive Bayes — a probabilistic purr-fectionist</li>
+						<li>K-Nearest Neighbours — asks the neighbors what’s yum</li>
+						<li>Support Vector Machine — draws the purr-fect line between yum and yuck</li>
+						<li>Classification Trees — follows decision paths like a curious kitten</li>
+					</ul>
+				</p>
+				<p>
+					🐾 Curious how it all works?					
+				</p>
+				<p>
+					Get the full story (and all the code) in 
+					<a href="https://www.amazon.com/dp/B0CW9SFYXF" target="_blank">
+						<em><strong>Machine Learning for Humans on Cats </strong></em><img src="icons/amazon.png" alt="Amazon">
+					</a>
+				</p>
+			</div>
+		</div>
+	</section>
 	
   </main>
 
