--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 		</div>
 
 		<div class="card">
-			<a href="https://youtube.com/shorts/w5ttKir3s50" target="_blank" class="card-img-link">
+			<a href="https://youtube.com/shorts/8vprr0swots" target="_blank" class="card-img-link">
 				<img src="images/t-naive-bayes.jpg" alt="Naive Bayes preview" class="card-img" />
 			</a>
 			<div class="card-title-bar">
