--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
       <div class="cards">
 
 		<div class="card">
-			<a href="https://youtube.com/shorts/Uu5xhdya1oo" target="_blank" class="card-img-link">
+			<a href="https://youtube.com/shorts/CO8xOuMm-4U" target="_blank" class="card-img-link">
 				<img src="images/logistic-regression.jpg" alt="Logistic Regression preview" class="card-img" />
 			</a>
 			<div class="card-title-bar">
