--- a/index.html
+++ b/index.html
@@ -457,6 +457,23 @@
 				</div>
 			</div>
 		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/jBlkBmC-J3A" target="_blank" class="card-img-link">
+				<img src="images/knn.jpg" alt="KNN preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>k-Nearest Neighbors</h3>
+				<div class="card-links">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-KNN.pdf" target="_blank">
+						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
+					</a>
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/Classifiers-LogisticRegression-KNN.ipynb" target="_blank">
+						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+					</a>
+				</div>
+			</div>
+		</div>
 
 		<div class="card">
 			<a href="https://www.youtube.com/@katerynakononova" target="_blank" class="card-img-link">
