--- a/index.html
+++ b/index.html
@@ -474,6 +474,23 @@
 				</div>
 			</div>
 		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/EvADguxrTYk" target="_blank" class="card-img-link">
+				<img src="images/svm.jpg" alt="SVM preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Support Vector Machines</h3>
+				<div class="card-links">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-SVM.pdf" target="_blank">
+						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
+					</a>
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/Classifiers-LogisticRegression-KNN-SVM.ipynb" target="_blank">
+						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+					</a>
+				</div>
+			</div>
+		</div>
 
 		<div class="card">
 			<a href="https://www.youtube.com/@katerynakononova" target="_blank" class="card-img-link">
