--- a/index.html
+++ b/index.html
@@ -510,6 +510,23 @@
 		</div>
 		
 		<div class="card">
+			<a href="https://youtube.com/shorts/Xse-Tq1OAmc" target="_blank" class="card-img-link">
+				<img src="images/classification-tree.jpg" alt="Classification Tree preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Classification Tree</h3>
+				<div class="card-links">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-ClassificationTree.pdf" target="_blank">
+						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
+					</a>
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/Classifiers-LR-KNN-SVM-NB-CT.ipynb" target="_blank">
+						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+					</a>
+				</div>
+			</div>
+		</div>
+		
+		<div class="card">
 			<a href="https://www.youtube.com/@katerynakononova" target="_blank" class="card-img-link">
 				<img src="images/coming-soon.jpg" alt="Coming Soon preview" class="card-img" />
 			</a>
