--- a/index.html
+++ b/index.html
@@ -194,15 +194,6 @@
       <div class="cards">
 
 		<div class="card">
-			<a href="https://youtube.com/shorts/lLcmwxSeo6o" target="_blank" class="card-img-link">
-				<img src="images/t-outliers.jpg" alt="Outliers preview" class="card-img" />
-			</a>
-			<div class="card-title-bar">
-				<h3>Outliers</h3>				
-			</div>
-		</div>
-
-		<div class="card">
 			<a href="https://youtube.com/shorts/w5ttKir3s50" target="_blank" class="card-img-link">
 				<img src="images/t-errors.jpg" alt="Errors preview" class="card-img" />
 			</a>
@@ -219,16 +210,16 @@
 				<h3>Missing Data</h3>				
 			</div>
 		</div>
-
+		
 		<div class="card">
-			<a href="https://youtube.com/shorts/aNgRw5WGOgc" target="_blank" class="card-img-link">
-				<img src="images/t-scaling.jpg" alt="Scaling preview" class="card-img" />
+			<a href="https://youtube.com/shorts/lLcmwxSeo6o" target="_blank" class="card-img-link">
+				<img src="images/t-outliers.jpg" alt="Outliers preview" class="card-img" />
 			</a>
 			<div class="card-title-bar">
-				<h3>Scaling</h3>				
+				<h3>Outliers</h3>				
 			</div>
 		</div>
-
+		
 		<div class="card">
 			<a href="https://youtube.com/shorts/YQ_-40gLqA8" target="_blank" class="card-img-link">
 				<img src="images/t-encoding.jpg" alt="Encoding preview" class="card-img" />
@@ -238,6 +229,15 @@
 			</div>
 		</div>
 
+		<div class="card">
+			<a href="https://youtube.com/shorts/aNgRw5WGOgc" target="_blank" class="card-img-link">
+				<img src="images/t-scaling.jpg" alt="Scaling preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Scaling</h3>				
+			</div>
+		</div>
+		
       </div>
     </section>
 	
@@ -246,33 +246,33 @@
       <div class="cards">
 
 		<div class="card">
-			<a href="https://youtube.com/shorts/V3gSk4YQI2A" target="_blank" class="card-img-link">
-				<img src="images/feature-selection.jpg" alt="Feature Selection preview" class="card-img" />
+			<a href="https://youtube.com/shorts/Wzhk8VF9DJ8" target="_blank" class="card-img-link">
+				<img src="images/duplicates.jpg" alt="Duplicates preview" class="card-img" />
 			</a>
 			<div class="card-title-bar">
-				<h3>Feature Selection</h3>
+				<h3>Duplicates</h3>
 				<div class="card-links">
-					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-FeatureSelection.pdf" target="_blank">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-Duplicates.pdf" target="_blank">
 						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
 					</a>
-					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/EDA-FeatureSelection.ipynb" target="_blank">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/EDA-Duplicates.ipynb" target="_blank">
 						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
 					</a>
 				</div>
 			</div>
 		</div>
-
+		
 		<div class="card">
-			<a href="https://youtube.com/shorts/4pWwKtpgtjU" target="_blank" class="card-img-link">
-				<img src="images/encoding.jpg" alt="Encoding preview" class="card-img" />
+			<a href="https://youtube.com/shorts/Vqi9_er7PkE" target="_blank" class="card-img-link">
+				<img src="images/missing-data.jpg" alt="Missing Data preview" class="card-img" />
 			</a>
 			<div class="card-title-bar">
-				<h3>Encoding</h3>
+				<h3>Missing Data</h3>
 				<div class="card-links">
-					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-Encoding.pdf" target="_blank">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-MissingData.pdf" target="_blank">
 						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
 					</a>
-					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/EDA-Encoding.ipynb" target="_blank">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/EDA-MissingData.ipynb" target="_blank">
 						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
 					</a>
 				</div>
@@ -295,35 +295,35 @@
 				</div>
 			</div>
 		</div>
-
+		
 		<div class="card">
-			<a href="https://youtube.com/shorts/Vqi9_er7PkE" target="_blank" class="card-img-link">
-				<img src="images/missing-data.jpg" alt="Missing Data preview" class="card-img" />
+			<a href="https://youtube.com/shorts/4pWwKtpgtjU" target="_blank" class="card-img-link">
+				<img src="images/encoding.jpg" alt="Encoding preview" class="card-img" />
 			</a>
 			<div class="card-title-bar">
-				<h3>Missing Data</h3>
+				<h3>Encoding</h3>
 				<div class="card-links">
-					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-MissingData.pdf" target="_blank">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-Encoding.pdf" target="_blank">
 						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
 					</a>
-					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/EDA-MissingData.ipynb" target="_blank">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/EDA-Encoding.ipynb" target="_blank">
 						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
 					</a>
 				</div>
 			</div>
 		</div>
-
+		
 		<div class="card">
-			<a href="https://youtube.com/shorts/Wzhk8VF9DJ8" target="_blank" class="card-img-link">
-				<img src="images/duplicates.jpg" alt="Duplicates preview" class="card-img" />
+			<a href="https://youtube.com/shorts/V3gSk4YQI2A" target="_blank" class="card-img-link">
+				<img src="images/feature-selection.jpg" alt="Feature Selection preview" class="card-img" />
 			</a>
 			<div class="card-title-bar">
-				<h3>Duplicates</h3>
+				<h3>Feature Selection</h3>
 				<div class="card-links">
-					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-Duplicates.pdf" target="_blank">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-FeatureSelection.pdf" target="_blank">
 						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
 					</a>
-					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/EDA-Duplicates.ipynb" target="_blank">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/EDA-FeatureSelection.ipynb" target="_blank">
 						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
 					</a>
 				</div>
@@ -399,15 +399,6 @@
 		</div>
 
 		<div class="card">
-			<a href="https://youtube.com/shorts/8vprr0swots" target="_blank" class="card-img-link">
-				<img src="images/t-naive-bayes.jpg" alt="Naive Bayes preview" class="card-img" />
-			</a>
-			<div class="card-title-bar">
-				<h3>Naive Bayes</h3>				
-			</div>
-		</div>
-		
-		<div class="card">
 			<a href="https://youtube.com/shorts/3OuYYoSPnK0" target="_blank" class="card-img-link">
 				<img src="images/t-knn.jpg" alt="K-Nearest Neighbours preview" class="card-img" />
 			</a>
@@ -421,7 +412,16 @@
 				<img src="images/t-svm.jpg" alt="Support Vector Machine preview" class="card-img" />
 			</a>
 			<div class="card-title-bar">
-				<h3>Support Vector Machine</h3>				
+				<h3>Support Vector Machines</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/8vprr0swots" target="_blank" class="card-img-link">
+				<img src="images/t-naive-bayes.jpg" alt="Naive Bayes preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Naive Bayes</h3>				
 			</div>
 		</div>
 
@@ -514,7 +514,7 @@
 				<img src="images/classification-tree.jpg" alt="Classification Tree preview" class="card-img" />
 			</a>
 			<div class="card-title-bar">
-				<h3>Classification Tree</h3>
+				<h3>Classification Trees</h3>
 				<div class="card-links">
 					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-ClassificationTree.pdf" target="_blank">
 						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
