--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 		</div>
 	</section>
 	
-		<section id="classification-theory" class="section">
+	<section id="classification-theory" class="section">
       <h2>Classification: Theory</h2>
       <div class="cards">
 
@@ -595,6 +595,160 @@
 			</div>
 		</div>
 	</section>
+	
+	
+	<section id="regression-theory" class="section">
+      <h2>Regression: Theory</h2>
+      <div class="cards">
+
+		<div class="card">
+			<a href="https://youtube.com/shorts/lsW9vDxcX9Q" target="_blank" class="card-img-link">
+				<img src="images/t-linear-regression.jpg" alt="Linear Regression preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Linear Regression</h3>				
+			</div>
+		</div>
+
+		<div class="card">
+			<a href="https://youtube.com/shorts/wGOnFYcPBoQ" target="_blank" class="card-img-link">
+				<img src="images/t-polynomial-regression.jpg" alt="Polynomial Regression preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Polynomial Regression</h3>				
+			</div>
+		</div>
+
+		<div class="card">
+			<a href="https://youtube.com/shorts/MFSP6TQh-BM" target="_blank" class="card-img-link">
+				<img src="images/t-regression-tree.jpg" alt="Regression Tree preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Regression Trees</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/LOUtSUbnpn0" target="_blank" class="card-img-link">
+				<img src="images/t-stacking.jpg" alt="Stacking preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Stacking</h3>				
+			</div>
+		</div>
+
+		<div class="card">
+			<a href="https://youtube.com/shorts/IGdhud7Fq5g" target="_blank" class="card-img-link">
+				<img src="images/t-random-forest.jpg" alt="Random Forest preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Random Forest</h3>								
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/7_UXLsKIArc" target="_blank" class="card-img-link">
+				<img src="images/t-boosting.jpg" alt="Boosting preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Boosting</h3>								
+			</div>
+		</div>
+
+      </div>
+    </section>
+	
+	<section id="regression" class="section">
+      <h2>Regression: Practice</h2>
+      <div class="cards">
+
+		<div class="card">
+			<a href="https://youtube.com/shorts/P5Hw8JqE2_I" target="_blank" class="card-img-link">
+				<img src="images/linear-regression.jpg" alt="Linear Regression preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Linear Regression</h3>
+				<div class="card-links">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-LinearRegression.pdf" target="_blank">
+						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
+					</a>
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/Regressors-LinearRegression.ipynb" target="_blank">
+						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+					</a>
+				</div>
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://www.youtube.com/@katerynakononova" target="_blank" class="card-img-link">
+				<img src="images/coming-soon.jpg" alt="Coming Soon preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Coming soon</h3>				
+			</div>
+		</div>		
+
+      </div>
+    </section>
+	
+	<section id="eda-all-in-one" class="section">
+		<h2>Regression: All in One</h2>
+		<div class="cards">
+
+			<div class="card card-wide">
+				<a href="https://youtu.be/zCDi2i_Ptks" target="_blank" class="card-img-link">
+					<img src="images/regression-all-in-one.jpg" alt="Regression All in One preview" class="card-img" />
+				</a>
+				<div class="card-title-bar">
+					<h3>The Chill Guide to Regression</h3>
+					<div class="card-links">				
+						<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/Regressors.ipynb" target="_blank">
+							<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<section id="book-promo" class="section">
+		<div class="book-promo-container">
+			<div class="book-promo-image">
+				<a href="https://www.amazon.com/dp/B0CW9SFYXF" target="_blank">
+					<img src="images/book-cover.jpg" alt="Machine Learning for Humans on Cats Book Cover" />
+				</a>
+			</div>
+			<div class="book-promo-text">
+				<h2>Get the Full Guide</h2>
+				<p>
+					<img src="icons/shylo.png" alt="Shylo" class="cat-icon" />		
+					<em>“Hmm… can these algorithms figure out just how tasty each can really is?”</em></br>				
+					<img src="icons/mylo.png" alt="Mylo" class="cat-icon" />
+					<em>“Only one way to find out — let’s train them!”</em>
+				</p>
+				<p>
+					Follow the cats as they go beyond yes/no answers and start predicting **how much yum** using:
+					<ul>
+						<li><strong>Linear Regression</strong> — the straight-line starter for simple trends</li>
+						<li><strong>Polynomial Regression</strong> — adds curves when life isn’t linear</li>
+						<li><strong>Decision Trees</strong> — splits and branches to predict flavors like a curious kitty</li>
+						<li><strong>Random Forest</strong> — a whole forest of trees for purr-fect predictions</li>
+					</ul>
+				</p>
+				<p>
+					🐾 Curious how it all works?					
+				</p>
+				<p>
+					Get the full story (and all the code) in 
+					<a href="https://www.amazon.com/dp/B0CW9SFYXF" target="_blank">
+						<em><strong>Machine Learning for Humans on Cats </strong></em><img src="icons/amazon.png" alt="Amazon">
+					</a>
+				</p>
+			</div>
+		</div>
+	</section>
+	
+	
 	
   </main>
 
