--- a/index.html
+++ b/index.html
@@ -680,6 +680,23 @@
 		</div>
 		
 		<div class="card">
+			<a href="https://youtube.com/shorts/_z4ZSJut7X8" target="_blank" class="card-img-link">
+				<img src="images/regression-tree.jpg" alt="Regression Tree preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Regression Tree</h3>
+				<div class="card-links">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-RegressionTree.pdf" target="_blank">
+						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
+					</a>
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/Regressors-LinearRegression-RTree.ipynb" target="_blank">
+						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+					</a>
+				</div>
+			</div>
+		</div>
+		
+		<div class="card">
 			<a href="https://www.youtube.com/@katerynakononova" target="_blank" class="card-img-link">
 				<img src="images/coming-soon.jpg" alt="Coming Soon preview" class="card-img" />
 			</a>
