--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
 				<img src="images/regression-tree.jpg" alt="Regression Tree preview" class="card-img" />
 			</a>
 			<div class="card-title-bar">
-				<h3>Regression Tree</h3>
+				<h3>Regression Trees</h3>
 				<div class="card-links">
 					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-RegressionTree.pdf" target="_blank">
 						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
@@ -765,7 +765,245 @@
 		</div>
 	</section>
 	
+	<section id="clustering-theory" class="section">
+      <h2>Clustering: Theory</h2>
+      <div class="cards">
+
+		<div class="card">
+			<a href="https://youtube.com/shorts/8tZIpugzGZY" target="_blank" class="card-img-link">
+				<img src="images/t-hierarchical-clustering.jpg" alt="Hierarchical Clustering  preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Hierarchical Clustering </h3>				
+			</div>
+		</div>
+
+		<div class="card">
+			<a href="https://youtube.com/shorts/pX3giKmsSkU" target="_blank" class="card-img-link">
+				<img src="images/t-k-means.jpg" alt="K-means preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>K-means</h3>				
+			</div>
+		</div>
+
+		<div class="card">
+			<a href="https://youtube.com/shorts/6lrwmCnpiDM" target="_blank" class="card-img-link">
+				<img src="images/t-dbscan.jpg" alt="DBSCAN  preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>DBSCAN </h3>				
+			</div>
+		</div>
+				
+      </div>
+    </section>
 	
+	<section id="clustering" class="section">
+      <h2>Clustering: Practice</h2>
+      <div class="cards">
+		
+		<div class="card">
+			<a href="https://www.youtube.com/@katerynakononova" target="_blank" class="card-img-link">
+				<img src="images/coming-soon.jpg" alt="Coming Soon preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Coming soon</h3>				
+			</div>
+		</div>		
+
+      </div>
+    </section>
+	
+	<section id="eda-all-in-one" class="section">
+		<h2>Clustering: All in One</h2>
+		<div class="cards">
+
+			<div class="card card-wide">
+				<a href="https://youtu.be/UGuWr9fmW04" target="_blank" class="card-img-link">
+					<img src="images/clustering-all-in-one.jpg" alt="Clustering All in One preview" class="card-img" />
+				</a>
+				<div class="card-title-bar">
+					<h3>VibeClustering</h3>
+					<div class="card-links">				
+						<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/Clustering.ipynb" target="_blank">
+							<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<section id="book-promo" class="section">
+		<div class="book-promo-container">
+			<div class="book-promo-image">
+				<a href="https://www.amazon.com/dp/B0CW9SFYXF" target="_blank">
+					<img src="images/book-cover.jpg" alt="Machine Learning for Humans on Cats Book Cover" />
+				</a>
+			</div>
+			<div class="book-promo-text">
+				<h2>Get the Full Guide</h2>
+				<p>
+					<img src="icons/shylo.png" alt="Shylo" class="cat-icon" />		
+					<em>“So many cans… but which ones *belong together*?”</em></br>				
+					<img src="icons/mylo.png" alt="Mylo" class="cat-icon" />
+					<em>“Let’s see how our clustering tricks can sort them out!”</em>
+				</p>
+				<p>
+					Follow the cats as they go beyond single answers and start grouping cans into vibe-clusters using:
+					<ul>
+						<li><strong>Hierarchical Clustering</strong> builds a family tree of flavors, from big groups down to tiny cliques</li>
+						<li><strong>K-means</strong> finds the center of the crowd and gathers similar cans around it</li>
+						<li><strong>DBSCAN</strong> discovers hidden clusters and even spots the outliers (the odd cans out!)</li>
+					</ul>
+				</p>
+				<p>
+					🐾 Ready to explore how cats uncover hidden patterns?					
+				</p>
+				<p>
+					Get the full story (and all the code) in 
+					<a href="https://www.amazon.com/dp/B0CW9SFYXF" target="_blank">
+						<em><strong>Machine Learning for Humans on Cats </strong></em><img src="icons/amazon.png" alt="Amazon">
+					</a>
+				</p>
+			</div>
+		</div>
+	</section>
+	
+	<section id="neural-networks-theory" class="section">
+      <h2>Neural Networks: Theory</h2>
+      <div class="cards">
+
+		<div class="card">
+			<a href="https://youtube.com/shorts/f6BITYh7y3E" target="_blank" class="card-img-link">
+				<img src="images/t-nn.jpg" alt="Neural Networks preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Neural Networks</h3>				
+			</div>
+		</div>
+
+		<div class="card">
+			<a href="https://youtube.com/shorts/pNkGG9LNKwo" target="_blank" class="card-img-link">
+				<img src="images/t-backpropagation.jpg" alt="Backpropagation preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Backpropagation</h3>				
+			</div>
+		</div>
+
+		<div class="card">
+			<a href="https://youtube.com/shorts/NzMx6vJyQZI" target="_blank" class="card-img-link">
+				<img src="images/t-ffnn.jpg" alt="Feed Forward Neural Networks preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Feed Forward Neural Networks</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/I8CtaOKkhzA" target="_blank" class="card-img-link">
+				<img src="images/t-lstm.jpg" alt="LSTM preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>LSTM</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/Db7tiJkcEZ4" target="_blank" class="card-img-link">
+				<img src="images/t-cnn.jpg" alt="Convolutional Neural Networks preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Convolutional Neural Networks</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/u20HywkZA2U" target="_blank" class="card-img-link">
+				<img src="images/t-gan.jpg" alt="Generative Adversarial Networks preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Generative Adversarial Networks</h3>				
+			</div>
+		</div>
+				
+      </div>
+    </section>
+	
+	<section id="nn" class="section">
+      <h2>Neural Networks: Practice</h2>
+      <div class="cards">
+		
+		<div class="card">
+			<a href="https://www.youtube.com/@katerynakononova" target="_blank" class="card-img-link">
+				<img src="images/coming-soon.jpg" alt="Coming Soon preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Coming soon</h3>				
+			</div>
+		</div>		
+
+      </div>
+    </section>
+	
+	<section id="eda-all-in-one" class="section">
+		<h2>Neural Networks: All in One</h2>
+		<div class="cards">
+
+			<div class="card card-wide">
+				<a href="https://youtu.be/he-Q0D8ICyA" target="_blank" class="card-img-link">
+					<img src="images/nn-all-in-one.jpg" alt="Clustering All in One preview" class="card-img" />
+				</a>
+				<div class="card-title-bar">
+					<h3>DeepVibes</h3>
+					<div class="card-links">				
+						<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/FFNN.ipynb" target="_blank">
+							<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<section id="book-promo" class="section">
+		<div class="book-promo-container">
+			<div class="book-promo-image">
+				<a href="https://www.amazon.com/dp/B0CW9SFYXF" target="_blank">
+					<img src="images/book-cover.jpg" alt="Machine Learning for Humans on Cats Book Cover" />
+				</a>
+			</div>
+			<div class="book-promo-text">
+				<h2>Get the Full Guide</h2>
+				<p>
+					<img src="icons/shylo.png" alt="Shylo" class="cat-icon" />		
+					<em>“Some patterns are just too tricky for simple tricks…”</em></br>				
+					<img src="icons/mylo.png" alt="Mylo" class="cat-icon" />
+					<em>“Time to bring out the big paws — neural networks!”</em>
+				</p>
+				<p>
+					Follow the cats as they dive into the brainy side of AI with:
+					<ul>
+						<li><strong>Feedforward Neural Networks (FFNN)</strong> - the classic straight-through thinker for general patterns</li>
+						<li><strong>Long Short-Term Memory (LSTM)</strong> remembers past tastes to predict future yum (purr-fect for sequences)</li>
+						<li><strong>Convolutional Neural Networks (CNN)</strong> spots whiskers, stripes, and textures in images</li>
+						<li><strong>Generative Adversarial Networks (GAN)</strong> - a creative duel where one cat makes fake cans and the other tries to catch them</li>
+					</ul>
+				</p>
+				<p>
+					🐾 Curious to see how cats think (and dream) in neural nets?					
+				</p>
+				<p>
+					Get the full story (and all the code) in 
+					<a href="https://www.amazon.com/dp/B0CW9SFYXF" target="_blank">
+						<em><strong>Machine Learning for Humans on Cats </strong></em><img src="icons/amazon.png" alt="Amazon">
+					</a>
+				</p>
+			</div>
+		</div>
+	</section>
 	
   </main>
 
