--- a/index.html
+++ b/index.html
@@ -697,6 +697,23 @@
 		</div>
 		
 		<div class="card">
+			<a href="https://youtube.com/shorts/ChIlIg2Z7cc" target="_blank" class="card-img-link">
+				<img src="images/rf-cb.jpg" alt="Random Forest vs CatBoost preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Random Forest / CatBoost</h3>
+				<div class="card-links">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-RandomForestCatBoost.pdf" target="_blank">
+						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
+					</a>
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/Regressors-LinearRegression-RTree-RFCB.ipynb" target="_blank">
+						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+					</a>
+				</div>
+			</div>
+		</div>
+		
+		<div class="card">
 			<a href="https://www.youtube.com/@katerynakononova" target="_blank" class="card-img-link">
 				<img src="images/coming-soon.jpg" alt="Coming Soon preview" class="card-img" />
 			</a>
