--- a/index.html
+++ b/index.html
@@ -821,6 +821,23 @@
       <div class="cards">
 		
 		<div class="card">
+			<a href="https://youtube.com/shorts/izDO0yx3bzE" target="_blank" class="card-img-link">
+				<img src="images/hierarchical-clustering.jpg" alt="Hierarchical Clustering preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Hierarchical Clustering</h3>
+				<div class="card-links">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-HierarchicalClustering.pdf" target="_blank">
+						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
+					</a>
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/Clustering-HC.ipynb" target="_blank">
+						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+					</a>
+				</div>
+			</div>
+		</div>
+		
+		<div class="card">
 			<a href="https://www.youtube.com/@katerynakononova" target="_blank" class="card-img-link">
 				<img src="images/coming-soon.jpg" alt="Coming Soon preview" class="card-img" />
 			</a>
