--- a/index.html
+++ b/index.html
@@ -838,6 +838,23 @@
 		</div>
 		
 		<div class="card">
+			<a href="https://youtube.com/shorts/_RQetPZxXBI" target="_blank" class="card-img-link">
+				<img src="images/k-means.jpg" alt="K-means preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>K-means</h3>
+				<div class="card-links">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-K-means.pdf" target="_blank">
+						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
+					</a>
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/Clustering-HC-K-means.ipynb" target="_blank">
+						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+					</a>
+				</div>
+			</div>
+		</div>
+		
+		<div class="card">
 			<a href="https://www.youtube.com/@katerynakononova" target="_blank" class="card-img-link">
 				<img src="images/coming-soon.jpg" alt="Coming Soon preview" class="card-img" />
 			</a>
