--- a/index.html
+++ b/index.html
@@ -1005,6 +1005,23 @@
       <div class="cards">
 		
 		<div class="card">
+			<a href="https://youtube.com/shorts/ew5l8AHKMTA" target="_blank" class="card-img-link">
+				<img src="images/nnclassifier.jpg" alt="neural network classifier preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>FFNN classifier</h3>
+				<div class="card-links">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-FFNN_Classifier.pdf" target="_blank">
+						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
+					</a>
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/Classifiers-LogisticRegression-KNN-SVM-NB-FFNN.ipynb" target="_blank">
+						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+					</a>
+				</div>
+			</div>
+		</div>
+		
+		<div class="card">
 			<a href="https://www.youtube.com/@katerynakononova" target="_blank" class="card-img-link">
 				<img src="images/coming-soon.jpg" alt="Coming Soon preview" class="card-img" />
 			</a>
