--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
       <div class="cards">
 		
 		<div class="card">
-			<a href="https://youtube.com/shorts/ew5l8AHKMTA" target="_blank" class="card-img-link">
+			<a href="https://www.youtube.com/shorts/ew5l8AHKMTA" target="_blank" class="card-img-link">
 				<img src="images/nnclassifier.jpg" alt="neural network classifier preview" class="card-img" />
 			</a>
 			<div class="card-title-bar">
@@ -1015,6 +1015,23 @@
 						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
 					</a>
 					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/Classifiers-LogisticRegression-KNN-SVM-NB-FFNN.ipynb" target="_blank">
+						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+					</a>
+				</div>
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/VP5KRnqiDdA" target="_blank" class="card-img-link">
+				<img src="images/nnregressor.jpg" alt="neural network regressor preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>FFNN regressor</h3>
+				<div class="card-links">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-FFNN_Regressor.pdf" target="_blank">
+						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
+					</a>
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/Regressors-LinearRegression-FFNN.ipynb" target="_blank">
 						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
 					</a>
 				</div>
