--- a/index.html
+++ b/index.html
@@ -1107,6 +1107,189 @@
 		</div>
 	</section>
 	
+	<section id="bonus-knowledge-1" class="section">
+      <h2>Bonus Knowledge: ML Toolbox Extras</h2>
+      <div class="cards">		
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/nWDHh8r5txA" target="_blank" class="card-img-link">
+				<img src="images/supervised-learning.jpg" alt="Supervised Learning preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Supervised Learning</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/-PeDLD0mZd4" target="_blank" class="card-img-link">
+				<img src="images/unsupervised-learning.jpg" alt="Unsupervised Learning preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Unsupervised Learning</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/zDAEBiH0J5g" target="_blank" class="card-img-link">
+				<img src="images/reinforcement-learning.jpg" alt="Reinforcement Learning preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Reinforcement Learning</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/5omCHREuP9Q" target="_blank" class="card-img-link">
+				<img src="images/ensembles.jpg" alt="Ensembles preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Ensembles</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/OyeCP9D3kjM" target="_blank" class="card-img-link">
+				<img src="images/transfer-learning.jpg" alt="Transfer Learning preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Transfer Learning</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/pIJjVAtoYH0" target="_blank" class="card-img-link">
+				<img src="images/classification-regression.jpg" alt="Classification vs Regression preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Classification vs Regression</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/TyWZc65s7Wg" target="_blank" class="card-img-link">
+				<img src="images/classification-clustering.jpg" alt="Classification vs Clustering preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Classification vs Clustering</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://www.youtube.com/@katerynakononova" target="_blank" class="card-img-link">
+				<img src="images/coming-soon.jpg" alt="Coming Soon preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Coming soon</h3>				
+			</div>
+		</div>
+
+      </div>
+    </section>
+		
+	<section id="bonus-knowledge-2" class="section">
+      <h2>Bonus Knowledge: AI Bits & Bytes</h2>
+      <div class="cards">
+			
+		<div class="card">
+			<a href="https://youtube.com/shorts/JIbOj-asdJI" target="_blank" class="card-img-link">
+				<img src="images/ml-ai.jpg" alt="ML vs AI preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>ML vs AI</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/WBtRFvm2Usw" target="_blank" class="card-img-link">
+				<img src="images/ml-nn.jpg" alt="ML vs NN preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>ML vs NN</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/Lu7537Q4AWE" target="_blank" class="card-img-link">
+				<img src="images/ml-ds.jpg" alt="ML vs DS preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>ML vs DS</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/wrhQG42-T4E" target="_blank" class="card-img-link">
+				<img src="images/chatgpt.jpg" alt="ChatGpt for cats preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>ChatGpt for cats</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/_rTVaXD8Js8" target="_blank" class="card-img-link">
+				<img src="images/prompt-design.jpg" alt="Prompt design preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Prompt design</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://www.youtube.com/@katerynakononova" target="_blank" class="card-img-link">
+				<img src="images/coming-soon.jpg" alt="Coming Soon preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Coming soon</h3>				
+			</div>
+		</div>			
+
+      </div>
+    </section>
+	
+	<section id="bonus-knowledge-3" class="section">
+      <h2>Bonus Knowledge: Data Collecting</h2>
+      <div class="cards">
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/0twdZzTKXeU" target="_blank" class="card-img-link">
+				<img src="images/t-data-collecting-1.jpg" alt="Data Collecting preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Data Collecting by yourself</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/dCrga_M5GqQ" target="_blank" class="card-img-link">
+				<img src="images/data-collecting-2.jpg" alt="Data Collecting preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Data Collection in automated way</h3>				
+			</div>
+		</div>
+
+		<div class="card">
+			<a href="https://youtube.com/shorts/twoHwsjQzLY" target="_blank" class="card-img-link">
+				<img src="images/data-collecting-3.jpg" alt="Data Collecting preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Data Collection in the controlled environment</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://www.youtube.com/@katerynakononova" target="_blank" class="card-img-link">
+				<img src="images/coming-soon.jpg" alt="Coming Soon preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Coming soon</h3>				
+			</div>
+		</div>
+				
+      </div>
+    </section>	
+	
   </main>
 
   <footer>
