--- a/index.html
+++ b/index.html
@@ -65,6 +65,32 @@
       <div class="cards">
 
 		<div class="card">
+			<a href="https://www.youtube.com/shorts/ew5l8AHKMTA" target="_blank" class="card-img-link">
+				<img src="images/nnclassifier.jpg" alt="neural network classifier preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>FFNN classifier</h3>
+				<div class="card-links">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-FFNN_Classifier.pdf" target="_blank">
+						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
+					</a>
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/Classifiers-LogisticRegression-FFNN.ipynb" target="_blank">
+						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+					</a>
+				</div>
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/w5ttKir3s50" target="_blank" class="card-img-link">
+				<img src="images/t-errors.jpg" alt="Errors preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Errors</h3>				
+			</div>
+		</div>
+		
+		<div class="card">
 			<a href="https://youtube.com/shorts/URGXXr98N0Q" target="_blank" class="card-img-link">
 				<img src="images/python.jpg" alt="Python preview" class="card-img" />
 			</a>
@@ -79,11 +105,11 @@
 		</div>
 
 		<div class="card">
-			<a href="https://youtube.com/shorts/w5ttKir3s50" target="_blank" class="card-img-link">
-				<img src="images/t-errors.jpg" alt="Errors preview" class="card-img" />
+			<a href="https://youtube.com/shorts/wGOnFYcPBoQ" target="_blank" class="card-img-link">
+				<img src="images/t-polynomial-regression.jpg" alt="Polynomial Regression preview" class="card-img" />
 			</a>
 			<div class="card-title-bar">
-				<h3>Errors</h3>				
+				<h3>Polynomial Regression</h3>				
 			</div>
 		</div>
 		
@@ -105,11 +131,11 @@
 		</div>
 		
 		<div class="card">
-			<a href="https://youtube.com/shorts/wGOnFYcPBoQ" target="_blank" class="card-img-link">
-				<img src="images/t-polynomial-regression.jpg" alt="Polynomial Regression preview" class="card-img" />
+			<a href="https://youtube.com/shorts/4FPCMmB3CmM" target="_blank" class="card-img-link">
+				<img src="images/t-predictive-machines.jpg" alt="Predictive Machines preview" class="card-img" />
 			</a>
 			<div class="card-title-bar">
-				<h3>Polynomial Regression</h3>				
+				<h3>Predictive Machines</h3>				
 			</div>
 		</div>
 
@@ -131,39 +157,13 @@
 		</div>
 		
 		<div class="card">
-			<a href="https://youtube.com/shorts/4FPCMmB3CmM" target="_blank" class="card-img-link">
-				<img src="images/t-predictive-machines.jpg" alt="Predictive Machines preview" class="card-img" />
-			</a>
-			<div class="card-title-bar">
-				<h3>Predictive Machines</h3>				
-			</div>
-		</div>
-
-		<div class="card">
-			<a href="https://youtube.com/shorts/Vqi9_er7PkE" target="_blank" class="card-img-link">
-				<img src="images/missing-data.jpg" alt="Missing Data preview" class="card-img" />
-			</a>
-			<div class="card-title-bar">
-				<h3>Missing Data</h3>
-				<div class="card-links">
-					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-MissingData.pdf" target="_blank">
-						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
-					</a>
-					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/EDA-MissingData.ipynb" target="_blank">
-						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
-					</a>
-				</div>
-			</div>
-		</div>
-		
-		<div class="card">
 			<a href="https://youtube.com/shorts/0twdZzTKXeU" target="_blank" class="card-img-link">
 				<img src="images/t-data-collecting-1.jpg" alt="Data Collecting preview" class="card-img" />
 			</a>
 			<div class="card-title-bar">
 				<h3>Data Collecting</h3>				
 			</div>
-		</div>
+		</div>			
 
       </div>
     </section>
