--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <img src="images/kateryna-kononova.jpg" alt="Kateryna Kononova photo" class="profile" />
         <div class="about-text">
 			<p><strong>Machine Learning for Humans on Cats</strong> is a practical guide to understanding the magic world of AI. Whether you're new to ML or just tired of boring tutorials, this project was made to help you learn with a smile.</p>
-			<p>Created by <strong>Dr. Kateryna Kononova</strong>, Professor at Karazin University and expert in data science, this project blends academic depth with a cat-fueled sense of humor to make ML accessible to everyone.</p>
+			<p>Created by <strong>Dr. Kateryna Kononova </strong>(<a href="Kononova_CV.pdf" target="_blank">[↓] CV</a>), Professor at Karazin University and expert in data science, this project blends academic depth with a cat-fueled sense of humor to make ML accessible to everyone.</p>
 			<p>It all began when ChatGPT-3 first became available, and I jumped in. The book came first, followed by Shorts just months later, when tools were still fresh and evolving rapidly. The early videos? Not perfect. But the idea? Still purring strong.</p>
 			<p>Now the project includes:
 				<ul>
