--- a/index.html
+++ b/index.html
@@ -1013,6 +1013,23 @@
 		</div>
 		
 		<div class="card">
+			<a href="https://youtube.com/shorts/HM6Kom9-Ak0" target="_blank" class="card-img-link">
+				<img src="images/cnn.jpg" alt="convolutional neural network  preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Convolutional Neural Networks</h3>
+				<div class="card-links">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-CNN.pdf" target="_blank">
+						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
+					</a>
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/CNN.ipynb" target="_blank">
+						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+					</a>
+				</div>
+			</div>
+		</div>
+		
+		<div class="card">
 			<a href="https://www.youtube.com/@katerynakononova" target="_blank" class="card-img-link">
 				<img src="images/coming-soon.jpg" alt="Coming Soon preview" class="card-img" />
 			</a>
